change to `/tms/job-event-log/` with json
